Drop down about me.

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
 <head>
 	<title>About me</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 <!-- My my mini icon ------------------------------>
 	<link rel="icon" href="spMini.png"> 
 <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -27,13 +28,11 @@
 <div class="centerWrap">
 <br>
 <div id="lineA">
-<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile. </br></br>
-I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>. I have acquired 
-knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation</em>. I am 
-developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various 
-programming projects in my spare time. </p>
 <p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching such as the Grand Tour, The Block NZ, Grand Designs or more often working on a project. Having a creative minded person, I always thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
-<p>Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, am learning Android Studio and looking to convert java application to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders.</p>
+<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile.  </br></br>
+I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation<em>. I am developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various programming projects in my spare time.</p>
+<p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a creative minded person, I enjoy thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
+<p>Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, I am learning Android Studio and looking to convert java applications to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders from a financial perspective adding more transparency to the building process.</p>
 
 <!--enable for the flex tiles row and col--->
 		<div class="row"> 
@@ -62,11 +61,13 @@ programming projects in my spare time. </p>
 <br><br>
 	</div> 
 	</div>
-</div>
 
-
-<h2 class="w">My Experience and Skills</h2>
-<h3>Tools and Software</h3>
+<div class="wrap-collabsible">
+  <input id="collapsible" class="toggle" type="checkbox">
+  <label for="collapsible" class="lbl-toggle">My Experience and Skills</label>
+  <div class="collapsible-content">
+    <div class="content-inner">
+      <h3>Tools and Software</h3>
 <li>Java</li>
 <li>SQLite</li>
 <li>Android Studio (Native apps)</li>
@@ -86,10 +87,17 @@ programming projects in my spare time. </p>
 <li>Sketch-Up, SU podium</li>
 <li>Microsoft PowerPoint for designing visually effective presentations</li>
 <li>WordPress</li>
+    </div>
+  </div>
+</div>
+<input id="collapsible4" class="toggle" type="checkbox" checked>
 
-<h2 class="w">WORK Experience</h2>
-
-		<div class="row"> 
+<div class="wrap-collabsible1">
+  <input id="collapsible1" class="toggle" type="checkbox">
+  <label for="collapsible1" class="lbl-toggle">WORK Experience</label>
+  <div class="collapsible-content1">
+    <div class="content-inner1">
+<div class="row"> 
 		  <div class="column">
 <h3>Information Systems Tutor</h3>
 <p>July 2017 - July 2018</p>
@@ -116,7 +124,6 @@ programming projects in my spare time. </p>
 	</div>
 
 <hr>
-
 <div class="row"> 
 		  <div class="column">
 <h3>S & S Patel Superette</h3>
@@ -142,11 +149,18 @@ programming projects in my spare time. </p>
 <br><br>
 	</div> 
 	</div>
+    </div>
+  </div>
+</div>
+<input id="collapsible4" class="toggle" type="checkbox" checked>
 
 
 
-
-<h2 class="w">Other Experience</h2>
+<div class="wrap-collabsible2">
+  <input id="collapsible2" class="toggle" type="checkbox">
+  <label for="collapsible2" class="lbl-toggle">Other Experience</label>
+  <div class="collapsible-content2">
+    <div class="content-inner2">
 <li><b>ACCY 223 Class Representative (Class Rep)</b><br>
 My responsible as a Student Representative (Class Rep) for the course paper Management Accounting, was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. 
 </li>
@@ -161,7 +175,7 @@ My responsible as a Student Representative (Class Rep) for course paper Systems 
 </li>
 <hr>
 <li><b>Maori and Pacifica student’s helpdesk</b><br>
-Running the Maori and Pacifica students helpdesk for INFO 101 for the website project. Guiding or teaching students when assistance is required.</li>
+Running the Maori and Pacifica students helpdesk for INFO 101 for the website project. Guiding and teaching students when assistance is required.</li>
 <hr>
 <li><b>South coast beach clean-up and McAllister Park Tree Planting</b><br>
 Cleaning our beaches (Owhiro Bay) [September] and planting trees
@@ -180,7 +194,16 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
   Your browser does not support the video tag.
 </video>
 <br>
-<h2 class="w">Education </h2>
+    </div>
+  </div>
+</div>
+<input id="collapsible2" class="toggle" type="checkbox" checked>
+
+<div class="wrap-collabsible3">
+  <input id="collapsible3" class="toggle" type="checkbox">
+  <label for="collapsible3" class="lbl-toggle">Education</label>
+  <div class="collapsible-content3">
+    <div class="content-inner3">
 <div class="row"> 
 		  <div class="column">
 <p><h4>Master of Software Development (MSwDev)</h4>
@@ -200,14 +223,12 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
 <p>NCEA Level 1-3, IB MYP</p>
 <p>Accounting, Design Visual Communication,  Economics, Maths and Physics</p>
 <li>Top of Design Visual Communication 2014 (Scots College)</li>
-
-			
 		</div>
 			<!--second col-------------->
 		<div class="column">
 		<br>
 			<div class="hoverOverImage">
-				<img src="sc.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
+				<img src="sc1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Scots College lion statue</div>
 				</div>
@@ -217,10 +238,13 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
 
 
 <hr>
+    </div>
+  </div>
+</div>
 
 
-
-
+</div>
+<br>
 </div>
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
@@ -233,66 +257,3 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
 </footer>
 </body>
 </html>
-<style>
-.hoverOverImage * {
-	box-sizing: border-box;
-}
-.hoverOverImage {
-	position: relative;
-	display: inline-block;
-	overflow: hidden;
-	max-width: 100%;
-	height: auto;
-}
-.hoverOverImage img {
-	max-width: 100%;
-}
-.hoverOverImage .hoverOverImage-layer_bottom {
-	display: block;
-}
-.hoverOverImage .hoverOverImage-layer_top {
-	border-radius: 10px;
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	padding: 15px;
-	-moz-transition: all 0.4s ease-in-out 0s;
-	-webkit-transition: all 0.4s ease-in-out 0s;
-	-ms-transition: all 0.4s ease-in-out 0s;
-	transition: all 0.4s ease-in-out 0s;
-}
-.hoverOverImage:hover .hoverOverImage-layer_top,
-.hoverOverImage.active .hoverOverImage-layer_top {
-	opacity: 1;
-}
-.hoverOverImage .hoverOverImage-text {
-	text-align: center;
-	font-size: 160%;
-	display: inline-block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-moz-transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-.hoverOverImage .hoverOverImage-text_mobile {
-	font-size: 160%;
-	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
-	border-top: 1px solid rgba(179, 179, 179, 0.7);
-	margin-top: 5px;
-	padding-top: 2px;
-	display: none;
-}
-.hoverOverImage.active .hoverOverImage-text_mobile {
-	display: block;
-}
-</style>
