--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Smeet Patel Home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 <!-- My my mini icon ------------------------------>
 	<link rel="icon" href="spMini.png"> 
 <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -77,6 +78,8 @@
 	</div>
 </div>
 <br>
+<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
+
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
 <footer class="footer">
@@ -89,68 +92,6 @@
 		<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
 	</div>
 </footer>
-<style>
-.hoverOverImage * {
-	box-sizing: border-box;
-}
-.hoverOverImage {
-	position: relative;
-	display: inline-block;
-	overflow: hidden;
-	max-width: 100%;
-	height: auto;
-}
-.hoverOverImage img {
-	max-width: 100%;
-}
-.hoverOverImage .hoverOverImage-layer_bottom {
-	display: block;
-}
-.hoverOverImage .hoverOverImage-layer_top {
-	border-radius: 10px;
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	padding: 15px;
-	-moz-transition: all 0.4s ease-in-out 0s;
-	-webkit-transition: all 0.4s ease-in-out 0s;
-	-ms-transition: all 0.4s ease-in-out 0s;
-	transition: all 0.4s ease-in-out 0s;
-}
-.hoverOverImage:hover .hoverOverImage-layer_top,
-.hoverOverImage.active .hoverOverImage-layer_top {
-	opacity: 1;
-}
-.hoverOverImage .hoverOverImage-text {
-	text-align: center;
-	font-size: 160%;
-	display: inline-block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-moz-transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-.hoverOverImage .hoverOverImage-text_mobile {
-	font-size: 160%;
-	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
-	border-top: 1px solid rgba(179, 179, 179, 0.7);
-	margin-top: 5px;
-	padding-top: 2px;
-	display: none;
-}
-.hoverOverImage.active .hoverOverImage-text_mobile {
-	display: block;
-}
-</style>
+
 </body>
 </html>
