Back to top button

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,6 @@
 <div class="centerWrap">
 <br>
 <div id="lineA">
-<p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching such as the Grand Tour, The Block NZ, Grand Designs or more often working on a project. Having a creative minded person, I always thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
 <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile.  </br></br>
 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation<em>. I am developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various programming projects in my spare time.</p>
 <p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a creative minded person, I enjoy thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
@@ -246,6 +245,7 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
 </div>
 <br>
 </div>
+<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
   <div class="container text-center">
