--- a/myblog.html
+++ b/myblog.html
@@ -57,6 +57,8 @@
 </div>
 </div>
 
+<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
+
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
   <div class="container text-center">
