--- a/mycon.html
+++ b/mycon.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Web</title>
+	<title>Comtact</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" href="sp1.png">
+<link rel="stylesheet" type="text/css" href="style1.css">
+	<!-- My my mini icon ------------------------------>
+	<link rel="icon" href="spMini.png"> 
+<!-- Make the scale of screen to 1 to device ------------------------------>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="Smeetjavascript.js"></script>
 </style>
 </head>
 <body>
@@ -17,10 +22,31 @@
   <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
 </div>
 
+
 <div class="bannerContainer">
 <img src="b1.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
 <div class="bottom-left"><div class="add1"><p><b>CONTACT</b></p></div></div>
 </div>
+
+<div class="centerWrap">
+<div class="containerWork">
+  <div class="parent parent2">
+	<div class="child"><div class="wrapper">
+<a class="btn btn-icon btn-git" href="https://github.com/smeet-patel"><i class="fa fa-github"></i><span>Visit: github.com/smeet-patel</span></a>
+
+</div></div>
+    <div class="child"><div class="wrapper">
+	<a class="btn btn-icon btn-linkedin" href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin"></i><span>Connect to linkedin.com/in/smeet-patel-</span></a>
+
+</div></div>
+	<div class="child"><div class="wrapper">
+
+		<a class="btn btn-icon btn-linkedin" href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i><span>Email to smeetprpatel@gmail.com</span></a>
+
+</div></div>
+</div></div>
+</div>
+
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
   <div class="container text-center">
@@ -30,17 +56,7 @@
     <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
   </div>
 </footer>
-<script type ="text/javascript" src="main.js"></script>
-<script>
-function myFunction() {
-    var x = document.getElementById("mynav1");
-    if (x.className === "nav1") {
-        x.className += " responsive";
-    } else {
-        x.className = "nav1";
-    }
-}
-</script>
+
 
 </body>
 </html>
