--- a/aboutme.html
+++ b/aboutme.html
@@ -28,10 +28,11 @@
 <div class="centerWrap">
 <br>
 <div id="lineA">
-<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile.  </br></br>
+<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile.</p>  
+<p id="Dcolor">
 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation<em>. I am developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various programming projects in my spare time.</p>
-<p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a creative minded person, I enjoy thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
-<p>Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, I am learning Android Studio and looking to convert java applications to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders from a financial perspective adding more transparency to the building process.</p>
+<p id="Dcolor">When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a creative minded person, I enjoy thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
+<p id="Dcolor">Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, I am learning Android Studio and looking to convert java applications to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders from a financial perspective adding more transparency to the building process.</p>
 
 <!--enable for the flex tiles row and col--->
 		<div class="row"> 
@@ -42,7 +43,7 @@ I am a <u>Master of Software Development student</U> and have completed <u>Bache
 			<div class="hoverOverImage">
 				<img src="me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
 				<!--<a href="aboutme.html">--><div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">At Belmont Trig, December 2017</div>
+					<div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
 				</div></a>
 			</div>
 <br><br>
