--- a/myblog.html
+++ b/myblog.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Web</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>My Blog</title>
+	<!-- My my mini icon ------------------------------>
+	<link rel="icon" href="spMini.png"> 
+<!-- Make the scale of screen to 1 to device ------------------------------>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="Smeetjavascript.js"></script>
 </style>
 </head>
 <body>
