--- a/myblog.html
+++ b/myblog.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Blog</title>
-	<!-- My my mini icon ------------------------------>
-	<link rel="icon" href="spMini.png"> 
-<!-- Make the scale of screen to 1 to device ------------------------------>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="Smeetjavascript.js"></script>
+	<title>My Web</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </style>
 </head>
 <body>
@@ -60,8 +56,6 @@
   </div>
 </div>
 </div>
-
-<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
 
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
