--- a/aboutme.html
+++ b/aboutme.html
@@ -94,7 +94,7 @@ I am a <u>Master of Software Development student</U> and have completed <u>Bache
 
 <div class="wrap-collabsible1">
   <input id="collapsible1" class="toggle" type="checkbox">
-  <label for="collapsible1" class="lbl-toggle">WORK Experience</label>
+  <label for="collapsible1" class="lbl-toggle">Work Experience</label>
   <div class="collapsible-content1">
     <div class="content-inner1">
 <div class="row"> 
