--- a/index.html
+++ b/index.html
@@ -1,97 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Smeet Patel Home</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="style1.css">
-<!-- My my mini icon ------------------------------>
-	<link rel="icon" href="spMini.png"> 
-<!-- Make the scale of screen to 1 to device ------------------------------>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="Smeetjavascript.js"></script>
-</head>
-<body> 
-
-<!---------------------------------------------------------->
-<!-- Nav Bar ----------------------------------------------->
-
-	<div class="nav1" id="mynav1">
-<!--Adding My logo to the left and always showing -->
-	  <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-<!--Floating to the Left Side of the menu, the other pages-->
-	  <a href="mycon.html">CONTACT</a>
-	  <a href="myblog.html">BLOG</a>
-	  <a href="mywork.html">MY WORK</a>
-	  <a href="aboutme.html">ABOUT ME</a>
-<!--Shows menubutton when screen is small -->
-	  <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-	</div>
-
-<div class="cont">
-<p class="intro">Hello! My name is <b><em>Smeet</em></b>.</p><b>
-<pre class="biggerfont">Welcome to my website. <i>I am passionate about web design, mobile and project orientated task and I am a travel enthusiast.</i></pre><p class="biggerfont1">I am a Master of Software Development student @ Victoria University of Wellington (VUW).
-</p>
-</div>
-<!---------------------------------------------------------->
-<!-- Index Page Banner ------------------------------------->	
-<img src="smeet1p.png" alt="Smeet" style="width:100%">
-<!-- Index Page sports titles ------------------------------>	
-	<div class="centerWrap"><!--Centering everything in the div-->
-	<!--enable for the flex tiles row and col--->
-		<div class="row"> 
-		  <div class="column">
-		  <br>
-		  <!--container consist the image and text to display center
-		  when full screen---------------------------------------->
-			<div class="hoverOverImage">
-				<img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
-				<a href="mywork.html"><div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">Web Development & UX</div>
-				</div></a>
-			</div>
-<br><br>
-					<div class="hoverOverImage">
-			<img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round" >
-			<a href="mywork.html"><div class="hoverOverImage-layer_top">
-				<div class="hoverOverImage-text">Graphical Design Projects</div>
-			</div></a>
-		</div>
-			
-		</div>
-			<!--second col-------------->
-		<div class="column">
-		<br>
-			<div class="hoverOverImage">
-				<img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
-				<a href="mywork.html"><div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">Native App</div>
-				</div></a>
-			</div>
-<br><br>
-		<div class="hoverOverImage">
-			<img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
-			<a href="mywork.html"><div class="hoverOverImage-layer_top">
-				<div class="hoverOverImage-text">Programing Projects</div>
-			</div></a>
-		</div>
-	</div> 
-	</div>
-</div>
-<br>
-<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
-
-<!---------------------------------------------------------->
-<!-- Footer with Icons ------------------------------------->
-<footer class="footer">
-<!-- Enable and imports the icons in the banner -->
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-	<div class="container text-center">
-		<a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-		<a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-		<a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-		<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-	</div>
-</footer>
-
-</body>
+   <head>
+      <title>Smeet Patel Home</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="style1.css">
+      <!-- My my mini icon ------------------------------>
+      <link rel="icon" href="spMini.png">
+      <!-- Make the scale of screen to 1 to device ------------------------------>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script type="text/javascript" src="Smeetjavascript.js"></script>
+   </head>
+   <body>
+      <!---------------------------------------------------------->
+      <!-- Nav Bar ----------------------------------------------->
+      <div class="nav1" id="mynav1">
+         <!--Adding My logo to the left and always showing -->
+         <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+         <!--Floating to the Left Side of the menu, the other pages-->
+         <a href="mycon.html">CONTACT</a>
+         <a href="myblog.html">BLOG</a>
+         <a href="mywork.html">MY WORK</a>
+         <a href="aboutme.html">ABOUT ME</a>
+         <!--Shows menubutton when screen is small -->
+         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
+      </div>
+      <div class="cont">
+         <p class="intro">Hello! My name is <b><em>Smeet</em></b>.</p>
+         <b>
+         <pre class="biggerfont">Welcome to my website. <i>I am passionate about web design, mobile and project orientated task and I am a travel enthusiast.</i></pre>
+         <p class="biggerfont1">I am a Master of Software Development student @ Victoria University of Wellington (VUW).</p>
+      </div>
+      <!---------------------------------------------------------->
+      <!-- Index Page Banner ------------------------------------->	
+      <img src="smeet1p.png" alt="Smeet" style="width:100%">
+      <!-- Index Page sports titles ------------------------------>	
+      <div class="centerWrap">
+         <!--Centering everything in the div-->
+         <!--enable for the flex tiles row and col--->
+         <div class="row">
+            <div class="column">
+               <br>
+               <!--container consist the image and text to display center
+                  when full screen---------------------------------------->
+               <div class="hoverOverImage">
+                  <img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                  <a href="mywork.html">
+                     <div class="hoverOverImage-layer_top">
+                        <div class="hoverOverImage-text">Web Development & UX</div>
+                     </div>
+                  </a>
+               </div>
+               <br><br>
+               <div class="hoverOverImage">
+                  <img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round" >
+                  <a href="mywork.html">
+                     <div class="hoverOverImage-layer_top">
+                        <div class="hoverOverImage-text">Graphical Design Projects</div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+            <!--second col-------------->
+            <div class="column">
+               <br>
+               <div class="hoverOverImage">
+                  <img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                  <a href="mywork.html">
+                     <div class="hoverOverImage-layer_top">
+                        <div class="hoverOverImage-text">Native App</div>
+                     </div>
+                  </a>
+               </div>
+               <br><br>
+               <div class="hoverOverImage">
+                  <img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                  <a href="mywork.html">
+                     <div class="hoverOverImage-layer_top">
+                        <div class="hoverOverImage-text">Programing Projects</div>
+                     </div>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>
+      <br>
+      <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
+      <!---------------------------------------------------------->
+      <!-- Footer with Icons ------------------------------------->
+      <footer class="footer">
+         <!-- Enable and imports the icons in the banner -->
+         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
+         <div class="container text-center">
+            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+         </div>
+      </footer>
+   </body>
 </html>
