--- a/myblog.html
+++ b/myblog.html
@@ -1,72 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My Web</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</style>
-</head>
-<body>
-
-<div class="nav1" id="mynav1">
-  <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-  <a href="mycon.html">CONTACT</a>
-  <a href="myblog.html">BLOG</a>
-  <a href="mywork.html">MY WORK</a>
-  <a href="aboutme.html">ABOUT ME</a>
-  <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-</div>
-
-<div class="bannerContainer">
-<img src="p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
-<div class="bottom-left"><p><b>BLOG</b></p></div>
-</div>
-<div class="centerWrap">
-<div class="row"> 
-  <div class="column">
-    <img src="p4.jpg" style="width:100%">
-    <img src="p7.jpg" style="width:100%">
-    <img src="p10.jpg" style="width:100%">
-    <img src="p13.jpg" style="width:100%">
-    <img src="p16.jpg" style="width:100%">
-    <img src="p19.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="p5.jpg" style="width:100%">
-    <img src="p8.jpg" style="width:100%">
-    <img src="p11.jpg" style="width:100%">
-    <img src="p14.jpg" style="width:100%">
-    <img src="p17.jpg" style="width:100%">
-	<img src="p20.jpg" style="width:100%">
-  </div>  
-  <div class="column">
-    <img src="p6.jpg" style="width:100%">
-    <img src="p9.jpg" style="width:100%">
-    <img src="p12.jpg" style="width:100%">
-    <img src="p15.jpg" style="width:100%">
-    <img src="p18.jpg" style="width:100%">
-
-  </div>
-  <div class="column">
-    <img src="p21.jpg" style="width:100%">
-    <img src="p22.jpg" style="width:100%">
-    <img src="p23.jpg" style="width:100%">
-    <img src="p24.jpg" style="width:100%">
-    <img src="p25.jpg" style="width:100%">
-    <img src="p26.jpg" style="width:100%">
-  </div>
-</div>
-</div>
-
-<footer class="footer">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-  <div class="container text-center">
-    <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-    <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-    <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-    <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-  </div>
-  
-</footer>
-
-</body>
+   <head>
+      <title>My Web</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      </style>
+   </head>
+   <body>
+      <div class="nav1" id="mynav1">
+         <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+         <a href="mycon.html">CONTACT</a>
+         <a href="myblog.html">BLOG</a>
+         <a href="mywork.html">MY WORK</a>
+         <a href="aboutme.html">ABOUT ME</a>
+         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
+      </div>
+      <div class="bannerContainer">
+         <img src="p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
+         <div class="bottom-left">
+            <p><b>BLOG</b></p>
+         </div>
+      </div>
+      <div class="centerWrap">
+         <div class="row">
+            <div class="column">
+               <img src="p4.jpg" style="width:100%">
+               <img src="p7.jpg" style="width:100%">
+               <img src="p10.jpg" style="width:100%">
+               <img src="p13.jpg" style="width:100%">
+               <img src="p16.jpg" style="width:100%">
+               <img src="p19.jpg" style="width:100%">
+            </div>
+            <div class="column">
+               <img src="p5.jpg" style="width:100%">
+               <img src="p8.jpg" style="width:100%">
+               <img src="p11.jpg" style="width:100%">
+               <img src="p14.jpg" style="width:100%">
+               <img src="p17.jpg" style="width:100%">
+               <img src="p20.jpg" style="width:100%">
+            </div>
+            <div class="column">
+               <img src="p6.jpg" style="width:100%">
+               <img src="p9.jpg" style="width:100%">
+               <img src="p12.jpg" style="width:100%">
+               <img src="p15.jpg" style="width:100%">
+               <img src="p18.jpg" style="width:100%">
+            </div>
+            <div class="column">
+               <img src="p21.jpg" style="width:100%">
+               <img src="p22.jpg" style="width:100%">
+               <img src="p23.jpg" style="width:100%">
+               <img src="p24.jpg" style="width:100%">
+               <img src="p25.jpg" style="width:100%">
+               <img src="p26.jpg" style="width:100%">
+            </div>
+         </div>
+      </div>
+      <footer class="footer">
+         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
+         <div class="container text-center">
+            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+         </div>
+      </footer>
+   </body>
 </html>
