--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -54,12 +54,12 @@
 			</div>
 			<hr>
 			<p id="pb">For the home page, I wanted tiles which had a picture, and when hovered over, the associated text for picturer would appear on top. These tiles were my second form of navigation, which allowed the user to navigate. </p>
-			<p id="pb">Learing how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp" id="pb" title="W3Schools"><u>hover over lay from W3Schools</u></a> works, I implymented the picture overlay for the home page.</p>
-			<p id="pb"><b id="bc">Problem:</b> The width of the picture overlay was the size of the picture or 100% of teh width.</p>
-			<li id="pb">To make the picture over lay more user friendly, I implymented a wrapper to center the images and a 2 column responsive gallary. So on smaller devices, only one column would be shown as of a CSS media tag.</li>
-			<p id="pb">For my portfolio website, I also wanted a simple icon footer. This aesthetically pleasing for both web and mobile devices. I have seen some website using the <a href="https://www.w3schools.com/icons/fontawesome_icons_brand.asp" id="pb" title="W3Schools"><u>'Awesome Fonts'</u></a> icons for social media links. This meant did not have download and worry about copyrights of the icons.</p>
+			<p id="pb">Learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp" id="pb" title="W3Schools"><u>hover overlay from W3Schools</u></a> works. I implemented the picture overlay for the home page.</p>
+			<p id="pb"><b id="bc">Problem:</b> The width of the picture overlay was the size of the picture or 100% of the width.</p>
+			<li id="pb">To make the picture overlay more user-friendly, I implemented a wrapper to centre the images and a 2 column responsive gallery. So on smaller devices, only one column would be shown as of a CSS media tag.</li>
+			<p id="pb">For my portfolio website, I also wanted a simple icon footer. This aesthetically pleasing for both web and mobile devices. I have seen some website using the <a href="https://www.w3schools.com/icons/fontawesome_icons_brand.asp" id="pb" title="W3Schools"><u>'Awesome Fonts'</u></a> icons for social media links. This meant I did not have download and worry about copyrights of the icons.</p>
 			<p id="pb"><b id="bc">Problem:</b> The code appeared to be correct, but the icons weren't showing up.</p>
-			<p id="pb"><b id="bc">Answer:</b> <b>Google it! </b>Whenever is have a problem in programming in Java or any other language, I often Google it and use <a href="https://stackoverflow.com/questions/24922833/fontawesome-icons-not-showing-why" id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else have likely to have the same problem. </p>
+			<p id="pb"><b id="bc">Answer:</b> <b>Google it! </b>Whenever is have a problem in programming in Java or any other language, I often Google it and use <a href="https://stackoverflow.com/questions/24922833/fontawesome-icons-not-showing-why" id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else have likely to has the same problem. </p>
 			<li id="pb">I was missing the Awesome Fonts import statement. ( https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" )</li>
 			</br>
 			<div class="hoverOverImage">
@@ -69,19 +69,19 @@
 				</div>
 			</div>
 			<hr>
-			<p id="pb"><b id="bc">Failure :</b> 
-				Having used Angular JS, I was confident that I could easily have many show and hidden panels for some added functionality for the content on the other pages. As eager as I am to learn, I had realised that changing the visibility state of for the panels was not going to work with JavaScript. 
+			<p id="pb"><b id="bc">Failure:</b> 
+				Having used Angular JS, I was confident that I could easily have many shows and hidden panels for some added functionality for the content on the other pages. As eager as I am to learn, I had realised that changing the visibility state of for the panels was not going to work with JavaScript. 
 			</p>
 			<p id="pb">I came to release that Angular JS is made for single page web applications, while Javascript was able to handle much more straightforward events. </p>
 			<h3 class="w">Day 2</h3>
 			<p id="pb">The Second day started by cleaning up the code from the previous day and commenting where necessary or have left out.</p>
 			<h2 >Rugby Page</h2>
 			<ol>
-				<li id="pb">Implementing the banner from my profoilo and changing the images and heading text. </li>
+				<li id="pb">Implementing the banner from my portfolio and changing the images and heading text. </li>
 				<li id="pb">Have a comment section on the rugby page for a recent game. </li>
 				<li id="pb">Implementing media and gallery for the game. </li>
 				<li id="pb">Using Javascript, Implementing a quiz based on a match. </li>
-				<li id="pb">Implementing a team supporter, change background colour/image funtion. </li>
+				<li id="pb">Implementing a team supporter, change background colour/image function. </li>
 			</ol>
 			<h3>Learning PHP and connecting to SQL</h3>
 			<p id="pb">Creating a table</p>
@@ -94,10 +94,10 @@
 			<div class="hoverOverImage">
 				<img src="sw/rugbyphp.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round">
 				<div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">PHP code to post and recieve comments from MarinaDB</div>
+					<div class="hoverOverImage-text">PHP code to post and receive comments from MariaDB</div>
 				</div>
 			</div>
-			<p id="pb">When connecting to the databases,the user namer, passwords and databases name is requuired. </p>
+			<p id="pb">When connecting to the databases, the user namer, passwords and databases name is required.</p>
 			<p id="pb">Using echo to print error when testing the web-application</p>
 			<div class="hoverOverImage">
 				<img src="sw/rugbyphp1.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round" style="max-width:600px">
@@ -121,13 +121,13 @@
 				<li>The last javascript element I have implemented for the rugby page is a quiz which asks the user to guess the number of tries by the All Blacks in a game. If the input is lower than the answer, the user would be alerted for guessing lower, and if they are one off the solution, they would be alerted that the answer is close. If the answer is correct then they would be alerted answer is correct. </li>
 			</ol>
 			<h3 class="w">Day 3</h3>
-			<p id="pb">The last day assigned for this project. The soccer, cricket and login page were still to be completed.</p>
+			<p id="pb">The last day assigned for this project. The soccer, cricket and login page was still to be completed.</p>
 			<h2 >Requirements for the last day.</h2>
 			<ol>
 				<li id="pb">Making a login system which can register new users to the database.</li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swReg.jpeg" alt="New User sign up page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="sw/swReg.jpeg" alt="New User signs up page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">New User sign up page  </div>
 					</div>
