--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -33,6 +33,23 @@
 		<!-- Contact me buttons ------------------------------>
 		<div class="centerWrap">
 			<h1 class="w">SPORTS WORLD</h1>
+			<div class="containerWork">
+				<div class="parent parent2">
+					<div class="child">
+						<div class="wrapper">
+						</div>
+					</div>
+					<div class="child">
+						<div class="wrapper">
+							<a class="btn btn-icon btn-git" href="https://github.com/smeet-patel/SportsWorld-HTML-CSS-JS-PHP-"><i class="fa fa-github"></i><span>SPORTS WORLD on Git Hub</span></a>
+						</div>
+					</div>
+					<div class="child">
+						<div class="wrapper">
+						</div>
+					</div>
+				</div>
+			</div>
 			<h2>Objective:</h2>
 			<p id="pb">Create a website or web application using the five languages <b>(HTML, CSS, Javascript and PHP with MariaDB which uses SQL)</b>.</p>
 			<h2>Proposes of the project:</h2>
@@ -188,11 +205,12 @@
 				<p id="pb">I was unable to do the blogging system work with a just a 'txt' file rather than an SQL database. I have several years of SQL at this point, so this was easier for me.  </p>
 				<hr>
 			</ol>
-		<h2 class="w">Refection</h2>
-		<p id="pb">....</p>
+			<h2 class="w">Refection</h2>
+			<p id="pb">....</p>
 		</div>
 		<br>
 		</div>
+		<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
 		<!-- footer ------------------------------>
 		<footer class="footer">
 			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
