--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -34,21 +34,14 @@
 		<div class="centerWrap">
 			<h1 class="w">SPORTS WORLD</h1>
 			<div class="containerWork">
-				<div class="parent parent2">
-					<div class="child">
-						<div class="wrapper">
-						</div>
-					</div>
-					<div class="child">
-						<div class="wrapper">
-							<a class="btn btn-icon btn-git" href="https://github.com/smeet-patel/SportsWorld-HTML-CSS-JS-PHP-"><i class="fa fa-github"></i><span>SPORTS WORLD on Git Hub</span></a>
-						</div>
-					</div>
-					<div class="child">
-						<div class="wrapper">
-						</div>
-					</div>
-				</div>
+			<div class="rowTwo">
+  <div class="columnTwo" align="center">
+    <a class="btn btn-icon btn-git" href="https://github.com/smeet-patel/SportsWorld-HTML-CSS-JS-PHP-"><i class="fa fa-github"></i><span>SPORTS WORLD on Git Hub</span></a>
+  </div>
+  <div class="columnTwo" align="center">
+    <a class="btn btn-icon btn-sw" href="https://smeet-patel.github.io/SportsWorld/"><i class="fa fa-spinner"></i><span>SPORTS WORLD Demo</span></a>
+  </div>
+</div>
 			</div>
 			<h2>Objective:</h2>
 			<p id="pb">Create a website or web application using the five languages <b>(HTML, CSS, Javascript and PHP with MariaDB which uses SQL)</b>.</p>
@@ -205,8 +198,8 @@
 				<p id="pb">I was unable to do the blogging system work with a just a 'txt' file rather than an SQL database. I have several years of SQL at this point, so this was easier for me.  </p>
 				<hr>
 			</ol>
-			<h2 class="w">Refection</h2>
-			<p id="pb">....</p>
+			<h2 class="w">Coming soon...</h2>
+			<p id="pb"></p>
 		</div>
 		<br>
 		</div>
